--- a/.github/workflows/fetch-flights.yml
+++ b/.github/workflows/fetch-flights.yml
@@ -1,17 +1,21 @@
-name: Fetch Flights Daily
+name: Daily Flight Data Update
 
 on:
   schedule:
-    # kasdien 02:00 UTC (04:00 Lietuvos laiku)
+    # kasdien 02:00 UTC (04:00 Vilniuje)
     - cron:  '0 2 * * *'
   workflow_dispatch:  # leidžia paleisti rankiniu būdu
 
 jobs:
-  fetch:
+  update-flights:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -23,14 +27,21 @@ jobs:
           python -m pip install --upgrade pip
           pip install amadeus pandas python-dotenv
 
-      - name: Fetch flights and upload CSV
+      - name: Fetch and update flights CSV
         env:
           AMADEUS_CLIENT_ID: ${{ secrets.AMADEUS_CLIENT_ID }}
           AMADEUS_CLIENT_SECRET: ${{ secrets.AMADEUS_CLIENT_SECRET }}
         run: |
           python fetch_flights.py
-      - name: Upload CSV as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: flight-data
-          path: flights_IST_ISB_*.csv
+
+      - name: Commit & push updated CSV
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "actions@github.com"
+          git add flights_data.csv
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Daily update: $(date -u +'%Y-%m-%d')"
+            git push
+          fi
